# security_similarity_query

./: CMakeLists.txt  README.md
data/: SSQ_data_file.txt  search_req.txt  search_res.txt
include/: SSQ.c  SSQ.h  SSQ_kdtree.c  SSQ_kdtree.h  eTPSS.c  eTPSS.h  utils.c  utils.h
test/: SSQ_test.c
